# marketing-measurements-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yaml  django_contract_tester-1.6.1-py3-none-any.whl  docker-compose.local.yaml  pyproject.toml  start_server.sh
marketing_op/: manage.py
marketing_op/api/: exceptions.py  marketing_measurements.py  marketing_op_api.py  pagination.py  schemas.py  security.py  utils.py
marketing_op/api/design/: index.html  openapi.yaml  redoc-static.html
marketing_op/api/services/: auth.py  marketing.py  marketing_measurements.py  marketing_stats.py
marketing_op/api/tests/: conftest.py  factories.py  test_api.py  test_auth_api.py  test_marketing_measurements_service.py  test_marketing_stats_service.py  test_measurements_api.py  test_services.py  test_stats_api.py  test_utils.py
marketing_op/api/tests/bdd/: marketing_measurements.feature  test_marketing_measurements.py
marketing_op/core/: constants.py  models.py
marketing_op/core/data/: demo_data.csv
marketing_op/core/migrations/: 0001_initial.py  0002_auto_20240608_1755.py  0003_auto_20240609_0741.py  0004_apitoken.py
marketing_op/marketing_op/: asgi.py  settings.py  urls.py  wsgi.py
